--- a/portfolio.html
+++ b/portfolio.html
@@ -25,6 +25,10 @@
       rel="stylesheet"
     />
     <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.css"
+    />
+    <link
       href="./css/styles.css"
       rel="stylesheet"
     />
