Update index portfolio styles

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- Header -->
     <!-- ====== -->
     <header>
-      <section class="section-header">
+      <div class="section-border">
         <div class="container">
           <div class="nav-wrap-content">
             <a
@@ -86,13 +86,13 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
     </header>
     <!-- ============ -->
     <!-- Main content -->
     <!-- ============ -->
     <main>
-      <section class="grey-rectangle">
+      <section class="grey-rectangle section">
         <div class="container">
           <div class="main-title-wrap">
             <h1 class="main-title">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
