Add gap calc to index portfolio styles

--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@
     <main>
       <section class="section">
         <div class="container">
-          <h2 class="hidden-title">This title is to mute the validator ;)</h2>
+          <h2 class="hidden-title">This title has been set to mute the validator ;)</h2>
           <div class="portfolio-btn-wrap">
             <ul class="hidden-dot portfolio-btn-inline">
               <li>
