--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <section class="section">
         <div class="container">
           <div class="main-txt-wrapper">
-            <h2 class="hidden-title">Lorem ipsum dolor sit amet</h2>
+            <h2 class="hidden-title">This title has been set to mute the validator ;)</h2>
             <ul class="main-txt hidden-dot">
               <li>
                 <h3>LOREM IPSUM</h3>
